# Neural-style-transfer

./: .gitignore  .prettierrc  .pylintrc  Makefile  README.md  pyproject.toml
src/: constants.py
src/dataset/: constants.py  loading.py  models.py  processing_images.py
src/image_based/: __init__.py  __main__.py  logger.py  models.py  training.py  utils.py
src/loss/: image_based_loss.py  models.py  vgg.py
src/loss/networks/: vgg.py
src/utils/: constants.py  models.py  optimizers.py
