[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["Clement Wang <clementwang.pro@gmail.com>"]
description = ""
name = "neural-style-transfer"
version = "0.1.0"

[tool.poetry.dependencies]
numba = "^0.56.0"
nvidia-cuda-runtime-cu11 = "^11.7.99"
opencv-python = "^4.6.0.66"
pydantic = "^1.9.2"
python = "3.10.*"
scikit-image = "^0.19.3"
scipy = "^1.9.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%2Bcu116-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl" }
matplotlib = "3.6.0"

[tool.poetry.group.dev.dependencies]
PyYAML = "6.0"
black = "22.6.0"
isort = "5.10.1"
jupyter-contrib-nbextensions = "0.5.1"
jupyterlab = "3.4.5"
jupyterlab-code-formatter = "1.5.3"
pylint = "2.15.0"
toml-sort = "0.20.0"
tqdm = "4.64.0"
